set01/problem01_compile_errors.txt
c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29\set01\problem01.c:2:1: error: version control conflict marker in file
 <<<<<<< HEAD
 ^~~~~~~
In file included from c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29\set01\problem01.c:3:0:
c:\mingw\include\stdio.h:295:71: error: unknown type name 'size_t'
 _CRTIMP __cdecl __MINGW_NOTHROW  int    setvbuf (FILE *, char *, int, size_t);
                                                                       ^~~~~~
c:\mingw\include\stdio.h:345:54: error: unknown type name 'size_t'
 extern int __mingw_stdio_redirect__(snprintf)(char*, size_t, const char*, ...);
                                                      ^~~~~~
c:\mingw\include\stdio.h:349:55: error: unknown type name 'size_t'
 extern int __mingw_stdio_redirect__(vsnprintf)(char*, size_t, const char*, __VALIST);
                                                       ^~~~~~
c:\mingw\include\stdio.h:490:57: error: unknown type name 'size_t'
 _CRTIMP __cdecl __MINGW_NOTHROW  int _snprintf (char *, size_t, const char *, ...);
                                                         ^~~~~~
c:\mingw\include\stdio.h:491:58: error: unknown type name 'size_t'
 _CRTIMP __cdecl __MINGW_NOTHROW  int _vsnprintf (char *, size_t, const char *, __VALIST);
                                                          ^~~~~~
c:\mingw\include\stdio.h:502:23: error: unknown type name 'size_t'
 int snprintf (char *, size_t, const char *, ...);
                       ^~~~~~
c:\mingw\include\stdio.h:505:24: error: unknown type name 'size_t'
 int vsnprintf (char *, size_t, const char *, __VALIST);
                        ^~~~~~
c:\mingw\include\stdio.h:647:33: error: unknown type name 'size_t'
 getdelim (char ** __restrict__, size_t * __restrict__, int, FILE * __restrict__);
                                 ^~~~~~
c:\mingw\include\stdio.h:650:32: error: unknown type name 'size_t'
 getline (char ** __restrict__, size_t * __restrict__, FILE * __restrict__);
                                ^~~~~~
c:\mingw\include\stdio.h:734:34: error: unknown type name 'size_t'
 _CRTIMP __cdecl __MINGW_NOTHROW  size_t fread (void *, size_t, size_t, FILE *);
                                  ^~~~~~
c:\mingw\include\stdio.h:734:56: error: unknown type name 'size_t'
 _CRTIMP __cdecl __MINGW_NOTHROW  size_t fread (void *, size_t, size_t, FILE *);
                                                        ^~~~~~
c:\mingw\include\stdio.h:734:64: error: unknown type name 'size_t'
 _CRTIMP __cdecl __MINGW_NOTHROW  size_t fread (void *, size_t, size_t, FILE *);
                                                                ^~~~~~
c:\mingw\include\stdio.h:735:34: error: unknown type name 'size_t'
 _CRTIMP __cdecl __MINGW_NOTHROW  size_t fwrite (const void *, size_t, size_t, FILE *);
                                  ^~~~~~
c:\mingw\include\stdio.h:735:63: error: unknown type name 'size_t'
 _CRTIMP __cdecl __MINGW_NOTHROW  size_t fwrite (const void *, size_t, size_t, FILE *);
                                                               ^~~~~~
c:\mingw\include\stdio.h:735:71: error: unknown type name 'size_t'
 _CRTIMP __cdecl __MINGW_NOTHROW  size_t fwrite (const void *, size_t, size_t, FILE *);
                                                                       ^~~~~~
c:\mingw\include\stdio.h:962:64: error: unknown type name 'size_t'
 _CRTIMP __cdecl __MINGW_NOTHROW  int    _snwprintf (wchar_t *, size_t, const wchar_t *, ...);
                                                                ^~~~~~
c:\mingw\include\stdio.h:964:65: error: unknown type name 'size_t'
 _CRTIMP __cdecl __MINGW_NOTHROW  int    _vsnwprintf (wchar_t *, size_t, const wchar_t *, __VALIST);
                                                                 ^~~~~~
c:\mingw\include\stdio.h:1006:52: error: unknown type name 'size_t'
 __cdecl __MINGW_NOTHROW  int snwprintf (wchar_t *, size_t, const wchar_t *, ...);
                                                    ^~~~~~
c:\mingw\include\stdio.h:1007:53: error: unknown type name 'size_t'
 __cdecl __MINGW_NOTHROW  int vsnwprintf (wchar_t *, size_t, const wchar_t *, __VALIST);
                                                     ^~~~~~
c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29\set01\problem01.c:11:1: error: version control conflict marker in file
 =======
 ^~~~~~~
